<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/bottom_view_image_day"
            android:icon="@drawable/ic_baseline_image_search_24"
            android:title="Image day" />

    <item
            android:id="@+id/bottom_view_earth"
            android:icon="@drawable/ic_earth"
            android:title="@string/text_earth" />

    <item
            android:id="@+id/bottom_view_constraint_layout"
            android:icon="@drawable/ic_baseline_aspect_ratio_24"
            android:title="@string/constraintlayout" />

    <item
            android:id="@+id/bottom_view_collapsing_toolbar"
            android:icon="@drawable/ic_baseline_animation_24"
            android:title="@string/collapsingtoolbar" />

    <item
            android:id="@+id/bottom_view_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings"/>

</menu>